% refactoring + format % javadoc